Changes in @NEW@:
  o Client Changes:
    * Added support for getFileContents call to ShimNetClient (CNY-1669)
    * Added support for commitChangeSet and commitChangeSetFile to
      ShimNetClient (CNY-2545)
    * During promote operations use the cloned history for packages for
      the components of those packages as well. (CNY-1867)
    * Promote now uses group weak references to learn about all of the
      components for a package instead of downloading all of the package
      troves for the source. (CNY-1867)

  o Internal Changes:
    * More of the file installation path was moved into C for improved
      performance
    * Added misc.pack() and use it to freeze TroveRefsFilesStream and
      StreamCollection objects
    * Initial step of promote takes advantage of weak references to avoid
      downloading so many packages (CNY-1867)
    * The shim network client now supports CONARY_CLIENT_LOG environment
      variable
    * Conary update no longer caches all hostnames immediately on
      update - instead hostnames are cached as they are accessed.  This
      avoids unnecessary caches when installing from changesets. (CNY-2832)
    * Track CLONEDFROMLIST in troveInfo now as well as CLONEDFROM. This
      keeps track of the full clone history of a trove, with the most
      recent parent at the end of the list.
    * Use CLONEDFROMLIST instead of CLONEDFROM where available to remove
      the need to follow the cloned from history in time. (CNY-1867)

Changes in 2.0.23:
  o New Features:
    * A new commitaction module that logs to a database the results of
      all commits in to a repository has been added as logaction.py 
      (CNY-2814, CNY-2849)
    * Some trove sources now deal better with being passed a trove name
      of None when using findTroves. (CNY-2923)
    * Added --replace-files, --replace-modified-files, replace-config-files,
      --replace-managed-files to updateall. (CNY-2512)

  o Build Changes: